--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="icons/favicons/favicon-16x16.png">
     <link rel="manifest" href="bhackers.webmanifest">
     <meta name="description" content="A web client for BananaHackers' store-db">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link rel="stylesheet" href="css/global/bulma/bulma.min.css">
     <link rel="stylesheet" href="css/global/bulma/bulma-floating-button.css">
     <link rel="stylesheet" href="css/global/animate.css">
