--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/global/bulma/bulma.min.css">
     <link rel="stylesheet" href="css/global/bulma/bulma-floating-button.css">
     <link rel="stylesheet" href="css/global/animate.css">
-    <link rel="stylesheet" href="css/index/gh-fork-ribbon.css">
+    <link rel="stylesheet" href="css/global/gh-fork-ribbon.css">
     <link rel="stylesheet" href="css/index.css">
   </head>
   <body>
@@ -30,19 +30,8 @@
         </h3>
       </div>
       <progress id="loading-progress" class="progress is-danger" max="100"></progress>
-      <!-- <div class="container">
-        <div id="categories-list" class="field is-grouped is-grouped-multiline"></div>
-      </div>
-      <hr> -->
       <div class="tabs is-centered is-boxed">
-        <ul id="categories-tabs">
-          <li data-category-id="all" class="is-active category-tab">
-            <a data-category-id="all" class="category-link">
-              <span class="icon is-small"><i class="fas fa-store"></i></span>
-              <span>All apps</span>
-            </a>
-          </li>
-        </ul>
+        <ul id="categories-tabs"></ul>
       </div>
       <div id="apps-list" class="container"></div>
       <br>
@@ -178,9 +167,9 @@
     <script src="js/global/fontawesome/js/all.js" defer></script>
     <script src="js/global/bulma/bulma-toast.min.js" defer></script>
     <script src="js/global/bulma/bulma-modal.js" defer></script>
-    <script src="js/global/storedb/qrcode.js" defer></script>
-    <script src="js/global/storedb/categories.js" defer></script>
-    <script src="js/global/storedb/apps.js" defer></script>
+    <script src="js/index/storedb/qrcode.js" defer></script>
+    <script src="js/index/storedb/categories.js" defer></script>
+    <script src="js/index/storedb/apps.js" defer></script>
     <script src="js/index.js" defer></script>
   </body>
 </html>
