--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="css/index.css">
   </head>
   <body>
+    <input id="link-ghost"></input>
     <a class="github-fork-ribbon" href="http://github.com/jkelol111/webstore" data-ribbon="Fork me on GitHub" title="Fork me on GitHub" target="_blank">Fork me on GitHub</a> 
     <section class="section">
       <div class="container">
