Add sorting function

--- a/src/index.html
+++ b/src/index.html
@@ -31,14 +31,14 @@
           <a href="https://github.com/bananahackers/bananahackers.github.io" target="_blank">GitHub</a>
         </h3>
       </div>
-      <progress id="loading-progress" class="progress is-danger" max="100"></progress>
+      <hr>
       <div class="tabs is-centered is-boxed">
         <ul id="categories-tabs"></ul>
       </div>
       <div class="field is-grouped is-grouped-centered">
         <div class="control has-icons-left">    
-          <span id="sort-icon" class="icon is-left is-small">
-            <i class="fas fa-sort-alpha-down"></i>
+          <span class="icon is-left is-small">
+            <i id="sort-icon" class="fas fa-sort-alpha-down"></i>
           </span>
           <div class="select">
             <select id="sort-select" disabled>
