Tiny cosmetic fix & update packages

--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
           </div>
         </div>
         <div class="control">
-          <button id="reload-button" class="button is-primary" disabled>
+          <button id="reload-button" class="button is-primary is-loading" disabled>
             <span class="icon is-small">
               <i class="fas fa-sync-alt"></i>
             </span>
