--- a/src/index.html
+++ b/src/index.html
@@ -201,7 +201,7 @@
           </div>
         </section>
         <footer class="modal-card-foot">
-          <button id="app-download-modal-install-button" class="button is-primary">Install directly</button>
+          <button id="app-download-modal-install-button" class="button is-primary" disabled>Install directly</button>
           <button id="app-download-modal-download-button" class="button">Download manually</button>
         </footer>
       </div>
