--- a/src/index.html
+++ b/src/index.html
@@ -245,6 +245,9 @@
                 <div class="control">
                   <textarea id="app-details-modal-app-ratings-logged-in-description" class="textarea" placeholder="More than 2 characters." disabled></textarea>
                 </div>
+                <p id="app-details-modal-rating-incomplete-blurb" class="help is-danger is-hidden">
+                  2 or more characters required for rating!
+                </p>
               </div>
               <div class="field is-grouped">
                 <div class="control">
