No longer require compliance with Standard JS (because a large amount of code does not comply)

--- a/src/index.html
+++ b/src/index.html
@@ -430,7 +430,7 @@
     <script src="assets/js/lib/jquery/jquery-lang.min.js"></script>
     <script src="assets/js/lib/bulma/bulma-toast.min.js" defer></script>
     <script src="assets/js/lib/bulma/bulma-modal.js" defer></script>
-    <script src="assets/js/lib/qrcode.js" defer></script>
+    <script src="assets/js/lib/qrcode.min.js" defer></script>
     <script src="assets/js/index/storedb.js" defer></script>
     <script src="assets/js/lib/dayjs/dayjs.min.js" defer></script>
     <script src="assets/js/lib/dayjs/plugins/relativeTime.min.js" defer></script>
