Add localization support for the app.

--- a/src/index.html
+++ b/src/index.html
@@ -261,6 +261,10 @@
                   <td id="app-details-modal-app-type">Unknown</td>
                 </tr>
                 <tr>
+                  <th lang="en" data-lang-token="locales">Languages</th>
+                  <td id="app-details-modal-app-locales">Unknown</td>
+                </tr>
+                <tr>
                   <th lang="en" data-lang-token="Anti-features">Anti-features</th>
                   <td>
                     <ul>
