--- a/src/index.html
+++ b/src/index.html
@@ -323,14 +323,14 @@
                         <strong>@Unknown</strong>
                       </p>
                     </div>
-                    <div class="field">
+                    <!-- <div class="field">
                       <p class="control">
                         <textarea id="app-details-modal-app-ratings-logged-in-description"  class="textarea" placeholder="More than 2 characters." disabled></textarea>
                       </p>
                       <p id="app-details-modal-rating-incomplete-blurb" class="help is-danger is-hidden">
                         2 or more characters required for rating!
                       </p>
-                    </div>
+                    </div> -->
                     <div class="field has-addons">
                       <div class="control is-expanded has-icons-left">
                         <div class="icon is-small is-left">
