Add dependencies info for apps.

--- a/src/index.html
+++ b/src/index.html
@@ -253,6 +253,10 @@
                   <td id="app-details-modal-app-maintainers">Unknown</td>
                 </tr>
                 <tr>
+                  <th lang="en" data-lang-token="dependencies">Dependencies</th>
+                  <td id="app-details-modal-app-dependencies">Unknown</td>
+                </tr>
+                <tr>
                   <th lang="en" data-lang-token="version">Version</th>
                   <td id="app-details-modal-app-version">Unknown</td>
                 </tr>
