Add dependencies info link  for apps.

--- a/src/index.html
+++ b/src/index.html
@@ -254,7 +254,7 @@
                 </tr>
                 <tr>
                   <th lang="en" data-lang-token="dependencies">Dependencies</th>
-                  <td id="app-details-modal-app-dependencies">Unknown</td>
+                  <td id="app-details-modal-app-dependencies"></td>
                 </tr>
                 <tr>
                   <th lang="en" data-lang-token="version">Version</th>
