Restore comment feature.

--- a/src/index.html
+++ b/src/index.html
@@ -331,9 +331,9 @@
                       </p>
                     </div>
                     <div class="field">
-                      <!-- <p class="control">
+                      <p class="control">
                         <textarea id="app-details-modal-app-ratings-logged-in-description"  class="textarea" placeholder="More than 2 characters." disabled></textarea>
-                      </p> -->
+                      </p>
                       <p id="app-details-modal-rating-incomplete-blurb" class="help is-danger is-hidden">
                         2 or more characters required for rating!
                       </p>
