--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>openKaiOS WebStore</title>
+    <title>BananaHackers WebStore</title>
     <link rel="apple-touch-icon" sizes="180x180" href="assets/icons/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/icons/favicons/favicon-16x16.png">
     <link rel="manifest" href="bhackers.webmanifest">
-    <meta name="description" content="A web client for openKaiOS' store-db">
+    <meta name="description" content="A web client for BananaHackers' store-db">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <meta charset="UTF-8">
     <link rel="stylesheet" href="assets/css/lib/bulma/bulma.min.css">
@@ -39,7 +39,7 @@
           </a>
           <div class="navbar-item has-dropdown is-hoverable">
             <a class="navbar-link is-unselectable">
-              openKaiOS
+              BananaHackers
             </a>
     
             <div class="navbar-dropdown">
@@ -170,7 +170,7 @@
       <div class="modal-background animate__animated" data-bulma-modal="close"></div>
       <div class="modal-card animate__animated">
         <header class="modal-card-head">
-          <p class="modal-card-title">Login to openKaiOS Ratings</p>
+          <p class="modal-card-title">Login to BananaHackers Ratings</p>
           <button class="delete" data-bulma-modal="close"></button>
         </header>
         <section class="modal-card-body">
