Change default language to English.

--- a/src/index.html
+++ b/src/index.html
@@ -454,7 +454,7 @@
       lang.dynamic("zh-CN", "assets/locales/zh-CN.json");
       lang.init({
         defaultLang: "en",
-        currentLang: 'zh-CN',
+        currentLang: 'en',
         cookie: {
           name: 'langCookie',
           expiry: 365,
