:rocket: Switch to i18next.

--- a/src/index.html
+++ b/src/index.html
@@ -473,14 +473,18 @@
       </div>
     </div>
 
-    <script src="assets/js/lib/i18next.min.js" defer></script>
+    <!-- Globalize -->
+    <script src="assets/js/lib/i18next/i18next.min.js" defer></script>
+    <script src="assets/js/lib/i18next/plugins/i18nextBrowserLanguageDetector.min.js" defer></script>
+    <script src="assets/js/lib/i18next/plugins/i18next-fetch-backend.umd.js" defer></script>
+    <!-- Bulma -->
     <script src="assets/js/lib/bulma/bulma-toast.min.js" defer></script>
     <script src="assets/js/lib/bulma/bulma-modal.js" defer></script>
+    <!-- QR Code -->
     <script src="assets/js/lib/qrcode.min.js" defer></script>
-    <script src="assets/js/index/storedb.js" defer></script>
-    <script src="assets/js/lib/dayjs/dayjs.min.js" defer></script>
-    <script src="assets/js/lib/dayjs/plugins/relativeTime.min.js" defer></script>
-    <script src="assets/js/init.js" defer></script>
-    <script src="assets/js/index/controller.js" defer></script>
+    <!-- Store DB -->
+    <script src="assets/js/lib/storedb.js" defer></script>
+    <!-- Index -->
+    <script src="assets/js/index.js" defer></script>
   </body>
 </html>
